2005-12-04  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Correction: setting usergroupAfterAcceptation did not work if the original usergroup assigned at creation was changed by usergroupAfterConfirmation.

2005-11-30  Franz Holzinger  <kontakt@fholzinger.com>
	* German texts for the flexform

2005-11-28  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Eliminate error subpart when a required field is missing but no other validation error is raised.
	* Minor improvement to html template.

2005-11-26  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Version 2.2.1:
	* Fix in ext_localconf.php
	* Documentation update.
	
2005-11-25  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Added support for backend flexforms by Franz Holzinger.
	
2005-11-25  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Version 2.2.0:
	* Further correction due to IE mishandling of button elements of type button. Eliminated all button elements from the html template.
	* Added a note on upgrading to version 2 in the configuration section.

2005-11-24  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Version 2.1.0:
	* Major correction to the CSS-styled html template: backtracking on the use of button elements of type submit because their behavior is erratic in Internet Explorer 6 and break a number of screens of the extension. Most of them are replaced by input elements.
	* Some further adjustments to the CSS-styled template.
	* Simplification of the default CSS styles. In particular, most color and font styling has been eliminated.

2005-11-21  Sebastian Roth <sebastian.roth@c-qube.com>
	* Monday hacking session (mostly css related):
	* Many cleanups & some bugfixes.
	* Fixed some whitespace issues with IE/FF.

2005-11-16  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Version 2.0.0
	* Adding size and maxlength attributes on text input fields (in css-styled template).
	* Final css adjustments.
	* Updating the manual.
