@@ -1,3 +1,6 @@
+2005-12-05  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
+	* Use backURL linkVar to link back from the edit page, after saving, to some referring extension such as tt_products. Thanks to Franz Holzinger.
+	
 2005-12-04  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 	* Correction: setting usergroupAfterAcceptation did not work if the original usergroup assigned at creation was changed by usergroupAfterConfirmation.
 
